--- a/vc7_1/Installer.vcproj
+++ b/vc7_1/Installer.vcproj
@@ -11,9 +11,9 @@
 	</Platforms>
 	<Configurations>
 		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)\Installer\"
-			IntermediateDirectory="$(SolutionDir)\Installer\"
+			Name="Release Win32|Win32"
+			OutputDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			IntermediateDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
 			ConfigurationType="10">
 			<Tool
 				Name="VCCustomBuildTool"/>
@@ -25,9 +25,55 @@
 				Name="VCPreBuildEventTool"/>
 		</Configuration>
 		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)\Installer\"
-			IntermediateDirectory="$(SolutionDir)\Installer\"
+			Name="Debug Win32|Win32"
+			OutputDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			IntermediateDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			ConfigurationType="1">
+			<Tool
+				Name="VCCLCompilerTool"/>
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCLinkerTool"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
+		<Configuration
+			Name="Release x64|Win32"
+			OutputDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			IntermediateDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			ConfigurationType="10">
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+		</Configuration>
+		<Configuration
+			Name="Debug x64|Win32"
+			OutputDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
+			IntermediateDirectory="$(SolutionDir)\$(ConfigurationName)\Installer\"
 			ConfigurationType="1">
 			<Tool
 				Name="VCCLCompilerTool"/>
@@ -66,20 +112,40 @@
 		<File
 			RelativePath=".\MakeInstaller.bat">
 			<FileConfiguration
-				Name="Release|Win32">
+				Name="Release Win32|Win32">
 				<Tool
 					Name="VCCustomBuildTool"
-					Description="Making Release Installer..."
-					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;&quot;"
-					Outputs="$(SolutionDir)\Installer\Shareaza_*.exe"/>
+					Description="Making Release Win32 Installer..."
+					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;
+"
+					Outputs="$(OutDir)\Manifest_Release_Win32.txt;$(OutDir)\*.exe"/>
 			</FileConfiguration>
 			<FileConfiguration
-				Name="Debug|Win32">
+				Name="Debug Win32|Win32">
 				<Tool
 					Name="VCCustomBuildTool"
-					Description="Making Debug Installer..."
-					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;&quot;"
-					Outputs="$(SolutionDir)\Installer\Shareaza_Debug_*.exe"/>
+					Description="Making Debug Win32 Installer..."
+					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;
+"
+					Outputs="$(OutDir)\Manifest_Debug_Win32.txt;$(OutDir)\*.exe"/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Release x64|Win32">
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Making Release x64 Installer..."
+					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;
+"
+					Outputs="$(OutDir)\Manifest_Release_x64.txt;$(OutDir)\*.exe"/>
+			</FileConfiguration>
+			<FileConfiguration
+				Name="Debug x64|Win32">
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Making Debug x64 Installer..."
+					CommandLine="call MakeInstaller.bat &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;
+"
+					Outputs="$(OutDir)\Manifest_Debug_x64.txt;$(OutDir)\*.exe"/>
 			</FileConfiguration>
 		</File>
 	</Files>
