--- a/vc7_1/skin-installer.vcproj
+++ b/vc7_1/skin-installer.vcproj
@@ -10,9 +10,9 @@
 	</Platforms>
 	<Configurations>
 		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			Name="Debug Win32|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
 			ConfigurationType="1"
 			CharacterSet="1">
 			<Tool
@@ -27,10 +27,10 @@
 				BufferSecurityCheck="TRUE"
 				UsePrecompiledHeader="3"
 				PrecompiledHeaderThrough="skin.h"
-				AssemblerListingLocation="$(IntDir)/"
-				ProgramDataBaseFileName="$(IntDir)/"
+				AssemblerListingLocation="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				BrowseInformation="1"
-				BrowseInformationFile="$(IntDir)/"
+				BrowseInformationFile="$(IntDir)"
 				WarningLevel="4"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="4"
@@ -40,20 +40,24 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="zlibwapi.lib comctl32.lib"
-				OutputFile="$(SolutionDir)$(ConfigurationName)/Skin.exe"
+				OutputFile="$(OutDir)..\skin.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="../shareaza/zlib"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(SolutionDir)$(ConfigurationName)/skin.pdb"
+				ProgramDatabaseFile="$(TargetDir)skin.pdb"
+				GenerateMapFile="TRUE"
+				MapFileName="$(OutDir)$(TargetName).map"
+				MapExports="TRUE"
+				MapLines="FALSE"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Install..."
-				CommandLine="&quot;$(SolutionDir)$(ConfigurationName)/Skin.exe&quot; /install"/>
+				CommandLine="&quot;$(OutDir)..\skin.exe&quot; /install"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -73,9 +77,9 @@
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			Name="Release Win32|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
 			ConfigurationType="1"
 			UseOfMFC="1"
 			CharacterSet="1"
@@ -97,10 +101,10 @@
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="3"
 				PrecompiledHeaderThrough="skin.h"
-				AssemblerListingLocation="$(IntDir)/"
-				ProgramDataBaseFileName="$(IntDir)/"
+				AssemblerListingLocation="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				BrowseInformation="1"
-				BrowseInformationFile="$(IntDir)/"
+				BrowseInformationFile="$(IntDir)"
 				WarningLevel="4"
 				Detect64BitPortabilityProblems="TRUE"
 				DisableSpecificWarnings="4100;4201;4255;4668;4711;4820"/>
@@ -109,24 +113,26 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="unicows.lib zlibwapi.lib comctl32.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib secur32.lib"
-				OutputFile="$(SolutionDir)$(ConfigurationName)/Skin.exe"
+				OutputFile="$(OutDir)..\skin.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="../shareaza/zlib"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;secur32.lib;oleacc.lib"
-				ProgramDatabaseFile="$(SolutionDir)$(ConfigurationName)/skin.pdb"
+				ProgramDatabaseFile="$(TargetDir)skin.pdb"
+				MapFileName="$(OutDir)$(TargetName).map"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
 				SetChecksum="TRUE"
-				MergeSections=""/>
+				MergeSections=""
+				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Install..."
-				CommandLine="&quot;$(SolutionDir)$(ConfigurationName)/Skin.exe&quot; /install"/>
+				CommandLine="&quot;$(OutDir)..\skin.exe&quot; /install"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -134,6 +140,148 @@
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
+		<Configuration
+			Name="Release x64|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			ConfigurationType="1"
+			UseOfMFC="1"
+			CharacterSet="1"
+			WholeProgramOptimization="TRUE">
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/Wall"
+				Optimization="3"
+				GlobalOptimizations="TRUE"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="TRUE"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="TRUE"
+				OptimizeForProcessor="2"
+				OptimizeForWindowsApplication="TRUE"
+				AdditionalIncludeDirectories="../shareaza/zlib"
+				PreprocessorDefinitions="WIN32;NDEBUG;ZLIB_DLL;ZLIB_WINAPI;NOCRYPT"
+				StringPooling="TRUE"
+				RuntimeLibrary="0"
+				UsePrecompiledHeader="3"
+				PrecompiledHeaderThrough="skin.h"
+				AssemblerListingLocation="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
+				BrowseInformation="1"
+				BrowseInformationFile="$(IntDir)"
+				WarningLevel="4"
+				Detect64BitPortabilityProblems="TRUE"
+				DisableSpecificWarnings="4100;4201;4255;4668;4711;4820"/>
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="unicows.lib zlibwapi.lib comctl32.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib secur32.lib"
+				OutputFile="$(OutDir)..\skin.exe"
+				LinkIncremental="1"
+				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="../shareaza/zlib"
+				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;secur32.lib;oleacc.lib"
+				ProgramDatabaseFile="$(TargetDir)skin.pdb"
+				MapFileName="$(OutDir)$(TargetName).map"
+				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				SetChecksum="TRUE"
+				MergeSections=""
+				TargetMachine="0"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description="Install..."
+				CommandLine="&quot;$(OutDir)..\skin.exe&quot; /install"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
+		<Configuration
+			Name="Debug x64|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			ConfigurationType="1"
+			CharacterSet="1">
+			<Tool
+				Name="VCCLCompilerTool"
+				AdditionalOptions="/Wall"
+				Optimization="0"
+				AdditionalIncludeDirectories="../shareaza/zlib"
+				PreprocessorDefinitions="WIN32;_DEBUG;ZLIB_DLL;ZLIB_WINAPI;NOCRYPT"
+				StringPooling="TRUE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
+				BufferSecurityCheck="TRUE"
+				UsePrecompiledHeader="3"
+				PrecompiledHeaderThrough="skin.h"
+				AssemblerListingLocation="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
+				BrowseInformation="1"
+				BrowseInformationFile="$(IntDir)"
+				WarningLevel="4"
+				Detect64BitPortabilityProblems="TRUE"
+				DebugInformationFormat="4"
+				DisableSpecificWarnings="4100;4201;4255;4668;4820"/>
+			<Tool
+				Name="VCCustomBuildTool"/>
+			<Tool
+				Name="VCLinkerTool"
+				AdditionalDependencies="zlibwapi.lib comctl32.lib"
+				OutputFile="$(OutDir)..\skin.exe"
+				LinkIncremental="2"
+				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="../shareaza/zlib"
+				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="TRUE"
+				ProgramDatabaseFile="$(TargetDir)skin.pdb"
+				GenerateMapFile="TRUE"
+				MapFileName="$(OutDir)$(TargetName).map"
+				MapExports="TRUE"
+				MapLines="FALSE"
+				TargetMachine="0"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description="Install..."
+				CommandLine="&quot;$(OutDir)..\skin.exe&quot; /install"/>
+			<Tool
+				Name="VCPreBuildEventTool"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="_DEBUG"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
@@ -162,13 +310,25 @@
 			<File
 				RelativePath="..\skin-installer\skin.c">
 				<FileConfiguration
-					Name="Debug|Win32">
+					Name="Debug Win32|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="1"/>
 				</FileConfiguration>
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release Win32|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release x64|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug x64|Win32">
 					<Tool
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="1"/>
