--- a/vc7_1/zlibwapi.vcproj
+++ b/vc7_1/zlibwapi.vcproj
@@ -11,9 +11,9 @@
 	</Platforms>
 	<Configurations>
 		<Configuration
-			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			Name="Debug Win32|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
 			ConfigurationType="2"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
@@ -24,25 +24,29 @@
 				ExceptionHandling="FALSE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				ProgramDataBaseFileName="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="3"
 				DebugInformationFormat="3"/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCCustomBuildTool"
+				Description=" "
+				CommandLine="rem"
+				Outputs="&quot;$(TargetDir)..\$(TargetFileName)&quot;;&quot;$(TargetDir)..\plugins\$(TargetFileName)&quot;"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(SolutionDir)$(ConfigurationName)\plugins\$(ProjectName).dll"
+				OutputFile="$(OutDir)$(ProjectName).dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				ModuleDefinitionFile="../shareaza/zlib/zlib.def"
+				ModuleDefinitionFile="..\shareaza\zlib\zlib.def"
 				GenerateDebugInformation="TRUE"
-				ImportLibrary="$(SolutionDir)$(ConfigurationName)/plugins/$(ProjectName).lib"/>
+				ProgramDatabaseFile="$(OutDir)..\$(TargetName).pdb"
+				ImportLibrary="$(IntDir)$(ProjectName).lib"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying $(TargetFileName)..."
-				CommandLine="xcopy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)$(ConfigurationName)&quot; /y /q"/>
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy generated&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
@@ -62,9 +66,9 @@
 				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
 		</Configuration>
 		<Configuration
-			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)/$(ProjectName)"
+			Name="Release Win32|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
 			ConfigurationType="2"
 			UseOfMFC="0"
 			CharacterSet="0"
@@ -83,33 +87,160 @@
 				StringPooling="TRUE"
 				ExceptionHandling="FALSE"
 				RuntimeLibrary="0"
-				ProgramDataBaseFileName="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="3"/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCCustomBuildTool"
+				Description=" "
+				CommandLine="rem"
+				Outputs="&quot;$(TargetDir)..\$(TargetFileName)&quot;;&quot;$(TargetDir)..\plugins\$(TargetFileName)&quot;"/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="$(SolutionDir)$(ConfigurationName)\plugins\$(ProjectName).dll"
+				OutputFile="$(OutDir)$(ProjectName).dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				ModuleDefinitionFile="../shareaza/zlib/zlib.def"
+				ModuleDefinitionFile="..\shareaza\zlib\zlib.def"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
-				ImportLibrary="$(SolutionDir)$(ConfigurationName)/plugins/$(ProjectName).lib"/>
+				ImportLibrary="$(IntDir)$(ProjectName).lib"/>
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Copying $(TargetFileName)..."
-				CommandLine="xcopy &quot;$(TargetPath)&quot; &quot;$(SolutionDir)$(ConfigurationName)&quot; /y /q"/>
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy generated&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"
+				ExcludedFromBuild="TRUE"/>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy downloaded&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
+		<Configuration
+			Name="Release x64|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			ConfigurationType="2"
+			UseOfMFC="0"
+			CharacterSet="0"
+			ManagedExtensions="FALSE"
+			WholeProgramOptimization="TRUE">
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="3"
+				GlobalOptimizations="TRUE"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="TRUE"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="TRUE"
+				OptimizeForProcessor="2"
+				PreprocessorDefinitions="WIN32;NDEBUG;WIN32;ZLIB_WINAPI;ASMV;ASMINF"
+				StringPooling="TRUE"
+				ExceptionHandling="FALSE"
+				RuntimeLibrary="0"
+				ProgramDataBaseFileName="$(IntDir)"
+				WarningLevel="3"/>
+			<Tool
+				Name="VCCustomBuildTool"
+				Description=" "
+				CommandLine="rem"
+				Outputs="&quot;$(TargetDir)..\$(TargetFileName)&quot;;&quot;$(TargetDir)..\plugins\$(TargetFileName)&quot;"/>
+			<Tool
+				Name="VCLinkerTool"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="TRUE"
+				ModuleDefinitionFile="..\shareaza\zlib\zlib.def"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
+				ImportLibrary="$(IntDir)$(ProjectName).lib"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy generated&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"
+				ExcludedFromBuild="TRUE"/>
+			<Tool
+				Name="VCPreBuildEventTool"
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy downloaded&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"/>
+			<Tool
+				Name="VCPreLinkEventTool"/>
+			<Tool
+				Name="VCResourceCompilerTool"
+				PreprocessorDefinitions="NDEBUG"/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"/>
+			<Tool
+				Name="VCWebDeploymentTool"/>
+			<Tool
+				Name="VCManagedWrapperGeneratorTool"/>
+			<Tool
+				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+		</Configuration>
+		<Configuration
+			Name="Debug x64|Win32"
+			OutputDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			IntermediateDirectory="$(SolutionDir)$(ConfigurationName)\$(ProjectName)\"
+			ConfigurationType="2"
+			UseOfMFC="0"
+			ATLMinimizesCRunTimeLibraryUsage="FALSE">
+			<Tool
+				Name="VCCLCompilerTool"
+				Optimization="0"
+				PreprocessorDefinitions="WIN32;_DEBUG;ZLIB_WINAPI"
+				ExceptionHandling="FALSE"
+				BasicRuntimeChecks="3"
+				RuntimeLibrary="1"
+				ProgramDataBaseFileName="$(IntDir)"
+				WarningLevel="3"
+				DebugInformationFormat="3"/>
+			<Tool
+				Name="VCCustomBuildTool"
+				Description=" "
+				CommandLine="rem"
+				Outputs="&quot;$(TargetDir)..\$(TargetFileName)&quot;;&quot;$(TargetDir)..\plugins\$(TargetFileName)&quot;"/>
+			<Tool
+				Name="VCLinkerTool"
+				OutputFile="$(OutDir)$(ProjectName).dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="TRUE"
+				ModuleDefinitionFile="..\shareaza\zlib\zlib.def"
+				GenerateDebugInformation="TRUE"
+				ProgramDatabaseFile="$(OutDir)..\$(TargetName).pdb"
+				ImportLibrary="$(IntDir)$(ProjectName).lib"/>
+			<Tool
+				Name="VCMIDLTool"/>
+			<Tool
+				Name="VCPostBuildEventTool"
+				Description=" "
+				CommandLine="zlibwapi.bat &quot;Copy generated&quot; &quot;$(TargetDir)&quot; &quot;$(ConfigurationName)&quot; &quot;$(PlatformName)&quot;"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"/>
+				PreprocessorDefinitions="_DEBUG"/>
 			<Tool
 				Name="VCWebServiceProxyGeneratorTool"/>
 			<Tool
@@ -144,19 +275,34 @@
 			<File
 				RelativePath="..\shareaza\zlib\gvmat32.asm">
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release Win32|Win32">
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Processing Assembler Source"
 						CommandLine="ml.exe /c /coff /Cx /Zi /nologo /Fo&quot;$(IntDir)\$(InputName).obj&quot; &quot;$(InputPath)&quot;
 "
-						Outputs="&quot;$(IntDir)\$(InputName).obj&quot;"/>
+						Outputs="&quot;$(IntDir)$(InputName).obj&quot;"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release x64|Win32">
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Processing Assembler Source"
+						CommandLine="ml.exe /c /coff /Cx /Zi /nologo /Fo&quot;$(IntDir)\$(InputName).obj&quot; &quot;$(InputPath)&quot;
+"
+						Outputs="&quot;$(IntDir)$(InputName).obj&quot;"/>
 				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\shareaza\zlib\gvmat32c.c">
 				<FileConfiguration
-					Name="Debug|Win32"
+					Name="Debug Win32|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Debug x64|Win32"
 					ExcludedFromBuild="TRUE">
 					<Tool
 						Name="VCCLCompilerTool"/>
@@ -171,7 +317,16 @@
 			<File
 				RelativePath="..\shareaza\zlib\inffas32.asm">
 				<FileConfiguration
-					Name="Release|Win32">
+					Name="Release Win32|Win32">
+					<Tool
+						Name="VCCustomBuildTool"
+						Description="Processing Assembler Source"
+						CommandLine="ml.exe /c /coff /Cx /Zi /nologo /Fo&quot;$(IntDir)\$(InputName).obj&quot; &quot;$(InputPath)&quot;
+"
+						Outputs="&quot;$(IntDir)\$(InputName).obj&quot;"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release x64|Win32">
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Processing Assembler Source"
